--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 
 <head>
     <title>Zoe Bell and Associates</title>
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="https://kit.fontawesome.com/6620077410.js" crossorigin="anonymous"></script>
     <style>
-        img {
-            width: 300px;
-        }
     </style>
 </head>
 
 <body>
     <div class="body">
-        <section class="header">
+        <div class="header">
             <div class="header__overlay">
                 <nav class="header__navbar">
                     <div class="header__logo">
@@ -30,29 +27,26 @@
                     <h1>LET'S LEARN TOGETHER</h1>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="packages">
+            <h2 class="section__heading">What We Offer</h2>
             <div class="packages__body">
-                <h2 class="section__heading">What We Offer</h2>
                 <div class="packages__details">
-                    <img class="packages__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="packages__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-                        voluptatibus facilis sint sequi, reprehenderit laudantium soluta. Porro nisi facilis quam id
-                        accusamus blanditiis laudantium fuga eum ex est! Dolore, at.</p>
+                    <img class="packages__img" src="assets/img/one_on_one.jpg" alt="">
+                    <h3 class="packages__subheading">One on one lessons</h3>
+                    <span class="packages__text">All lessons are taught in a one on one format<br>thus allowing the student to feel comfortable.</span>
                 </div>
 
                 <div class="packages__details">
-                    <img class="packages__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="packages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum vitae
-                        harum, recusandae optio deserunt at neque inventore minima ut. Nobis, quo. Accusamus, officia?
-                        Quasi iste, fugiat tempore qui dignissimos possimus.</p>
+                    <img class="packages__img" src="assets/img/subjects.jpg" alt="">
+                    <h3 class="packages__subheading">Variety of subjects</h3>
+                    <span class="packages__text">We teach a variety of subjects<br> including Math, Physics and Information Technology!</span>
                 </div>
 
                 <div class="packages__details">
-                    <img class="packages__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="packages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi sunt
-                        architecto nihil, rerum porro vero, facilis molestiae provident blanditiis corrupti veniam
-                        placeat non excepturi magni accusamus autem. Non, expedita maiores.</p>
+                    <img class="packages__img" src="assets/img/welcome.jpg" alt="">
+                    <h3 class="packages__subheading">All grades welcome</h3>
+                    <span class="packages__text">All grades and age groups, <br>from grade 1 all the way to grade 12, are welcome.</span>
                 </div>
             </div>
         </section>
@@ -72,14 +66,14 @@
         <section class="team">
             <div class="team__body">
                 <h2 class="section__heading">Meet The Team</h2>
-                <div class="team__details">
+                <div class="about__details">
                     <img class="team__img" src="assets/img/mountain4.jpg" alt="">
                     <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At voluptas dolore
                         et iure fugit quod quidem impedit repellat harum facilis odio, fuga aliquid culpa rem, dolores
                         eum. Voluptas, provident. Error?</p>
                 </div>
                 <div class="team__details">
-                    <img class="team__img" src="assets/img/mountain4.jpg" alt="">
+                    <img class="about__img" src="assets/img/mountain4.jpg" alt="">
                     <p class="team__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae quam illum
                         adipisci facilis mollitia odio asperiores soluta eligendi, accusantium voluptates numquam
                         temporibus harum architecto reiciendis quia ut perferendis expedita atque!</p>
