adding the About section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>Zoe Bell and Associates</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:400,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="https://kit.fontawesome.com/6620077410.js" crossorigin="anonymous"></script>
@@ -34,31 +35,46 @@
                 <div class="packages__details">
                     <img class="packages__img" src="assets/img/one_on_one.jpg" alt="">
                     <h3 class="packages__subheading">One on one lessons</h3>
-                    <span class="packages__text">All lessons are taught in a one on one format<br>thus allowing the student to feel comfortable.</span>
+                    <span class="packages__text">All lessons are taught in a one on one format<br>thus allowing the
+                        student to feel comfortable.</span>
                 </div>
 
                 <div class="packages__details">
                     <img class="packages__img" src="assets/img/subjects.jpg" alt="">
                     <h3 class="packages__subheading">Variety of subjects</h3>
-                    <span class="packages__text">We teach a variety of subjects<br> including Math, Physics and Information Technology!</span>
+                    <span class="packages__text">We teach a variety of subjects<br> including Math, Physics and
+                        Information Technology!</span>
                 </div>
 
                 <div class="packages__details">
                     <img class="packages__img" src="assets/img/welcome.jpg" alt="">
                     <h3 class="packages__subheading">All grades welcome</h3>
-                    <span class="packages__text">All grades and age groups, <br>from grade 1 all the way to grade 12, are welcome.</span>
+                    <span class="packages__text">All grades and age groups, <br>from grade 1 all the way to grade 12,
+                        are welcome.</span>
                 </div>
             </div>
         </section>
 
         <section class="about">
+            <h2 class="section__heading">About Us</h2>
             <div class="about__body">
-                <h2 class="section__heading">About Us</h2>
                 <div class="about__details">
-                    <img class="about__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ut
-                        voluptatibus fugit suscipit sed ex, doloremque facere. Magnam aperiam ullam fugit est! Accusamus
-                        labore expedita tempore illo laboriosam distinctio fugiat.</p>
+                    <img class="about__img" src="assets/img/about_us.jpg" alt="">
+                    <p class="about__text">Zoë Bell & Associates was founded by Zoë Kayla Bell, a passionate and highly
+                        qualified Remedial and Learning Support Therapist. Zoë has a Bachelor of Education degree (Cum
+                        Laude) as well as a Bachelor of Education Honours degree - Learning Support (Cum Laude) and is
+                        currently pursuing a Counselling Psychology degree.
+                        <br>
+                        <br>
+                        Zoë Bell & Associates aims to provide holistic, quality and professional educational support in
+                        a therapeutic, loving and relaxing environment which caters for multiple learning needs and
+                        barriers to learning on all levels. We provide on-level and active learning and therapy in
+                        various fields, with the children’s best interests at the centre of it all.
+                        <br>
+                        <br>
+                        All facilitation occurs on a personal level where the learner’s individual level of
+                        understanding is built upon, maximising understanding, building self-confidence and opening the
+                        doors for all to feel capable and love learning.</p>
                 </div>
             </div>
         </section>
