adding team section

--- a/index.html
+++ b/index.html
@@ -80,19 +80,28 @@
         </section>
 
         <section class="team">
+            <h2 class="section__heading">Meet The Team</h2>
             <div class="team__body">
-                <h2 class="section__heading">Meet The Team</h2>
-                <div class="about__details">
-                    <img class="team__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At voluptas dolore
-                        et iure fugit quod quidem impedit repellat harum facilis odio, fuga aliquid culpa rem, dolores
-                        eum. Voluptas, provident. Error?</p>
+                <div class="team__details">
+                    <img class="team__img" src="assets/img/3.jpg" alt="">
+                    <h2 class="team__subheading">Zoe Bell</h2>
+                    <p class="team__text">
+                        Remedial therapist
+                        <br>
+                        Bachelor of Education Foundation Phase (Cum Laude) University of Fort Hare
+                        <br>
+                        Bachelor of Education Honours – Learning support and Remedial therapy (Cum Laude) Stellenbosch
+                        University</p>
                 </div>
                 <div class="team__details">
-                    <img class="about__img" src="assets/img/mountain4.jpg" alt="">
-                    <p class="team__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae quam illum
-                        adipisci facilis mollitia odio asperiores soluta eligendi, accusantium voluptates numquam
-                        temporibus harum architecto reiciendis quia ut perferendis expedita atque!</p>
+                    <img class="team__img" src="assets/img/josh_pic.jpg" alt="">
+                    <h2 class="team__subheading">Joshua Bell</h2>
+                    <p class="team__text">
+                            High School Tutor
+                            <br>
+                            Certificate in IT programing
+                            <br>
+                            Specialising in Accounting, Science, IT and Mathematics.</p>
                 </div>
             </div>
         </section>
