Finishing Off desktop design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                         <a href="#">Zoe Bell and Associates</a>
                     </div>
                     <div class="header__links">
-                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Team</a>
                         <a href="#">Contact</a>
                     </div>
                 </nav>
@@ -97,41 +98,33 @@
                     <img class="team__img" src="assets/img/josh_pic.jpg" alt="">
                     <h2 class="team__subheading">Joshua Bell</h2>
                     <p class="team__text">
-                            High School Tutor
-                            <br>
-                            Certificate in IT programing
-                            <br>
-                            Specialising in Accounting, Science, IT and Mathematics.</p>
+                        High School Tutor
+                        <br>
+                        Specialising in Accounting, Science, IT and Mathematics.</p>
                 </div>
             </div>
         </section>
 
         <section class="contact">
+            <h2 class="section__heading">Contact Us</h2>
             <div class="contact__body">
-                <h2 class="section__heading">Contact Us</h2>
+                <img class="contact__img" src="assets/img/contact.jpg">
                 <div class="contact__details">
-                    <div class="contact__text">
+                    <div class="contact__text--first">
                         <i class="fab fa-whatsapp"></i>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus autem numquam atque
-                            tempora cum eum obcaecati, debitis facilis dignissimos explicabo architecto, earum animi
-                            est. Doloremque dolores exercitationem id reiciendis magni?
-                        </span>
+                        <span>0718778372</span>
                     </div>
                     <div class="contact__text">
-                        <i class="far fa-envelope"></i>
-                        <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe quia error eos quis dolor?
-                            Magni nam porro deleniti culpa illum odio voluptatem! Quae quisquam perspiciatis explicabo
-                            vitae cupiditate repellendus provident.</span>
+                        <i class="fas fa-envelope"></i>
+                        <span>zoebellassociates@gmail.com</span>
+                    </div>
+                    <div class="contact__text">
+                        <i class="fab fa-facebook"></i>
+                        <span>Zoё Bell & Associates.</span>
                     </div>
                 </div>
             </div>
         </section>
-
-        <footer class="footer">
-            <span class="footer__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque fugiat ad
-                illo magnam velit quam odit voluptates soluta, corporis quisquam autem totam aut enim dignissimos
-                tenetur, dolorum eligendi suscipit distinctio.</span>
-        </footer>
     </div>
 </body>
 
