adding 1st iteration of mobile design

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Zoe Bell and Associates</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:400,700&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6620077410.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <script src="https://kit.fontawesome.com/6620077410.js" crossorigin="anonymous"></script>
     <style>
     </style>
 </head>
@@ -33,7 +33,7 @@
         <section class="packages">
             <h2 class="section__heading">What We Offer</h2>
             <div class="packages__body">
-                <div class="packages__details">
+                <div class="packages__details packages__details--first">
                     <img class="packages__img" src="assets/img/one_on_one.jpg" alt="">
                     <h3 class="packages__subheading">One on one lessons</h3>
                     <span class="packages__text">All lessons are taught in a one on one format<br>thus allowing the
@@ -83,8 +83,8 @@
         <section class="team">
             <h2 class="section__heading">Meet The Team</h2>
             <div class="team__body">
-                <div class="team__details">
-                    <img class="team__img" src="assets/img/3.jpg" alt="">
+                <div class="team__details team__details--first">
+                    <img class="team__img" src="assets/img/zoe_pic.jpg" alt="">
                     <h2 class="team__subheading">Zoe Bell</h2>
                     <p class="team__text">
                         Remedial therapist
