adding 2nd iteration mobile design (some changes)

--- a/index.html
+++ b/index.html
@@ -57,25 +57,32 @@
         </section>
 
         <section class="about">
-            <h2 class="section__heading">About Us</h2>
             <div class="about__body">
                 <div class="about__details">
                     <img class="about__img" src="assets/img/about_us.jpg" alt="">
-                    <p class="about__text">Zoë Bell & Associates was founded by Zoë Kayla Bell, a passionate and highly
-                        qualified Remedial and Learning Support Therapist. Zoë has a Bachelor of Education degree (Cum
-                        Laude) as well as a Bachelor of Education Honours degree - Learning Support (Cum Laude) and is
-                        currently pursuing a Counselling Psychology degree.
-                        <br>
-                        <br>
-                        Zoë Bell & Associates aims to provide holistic, quality and professional educational support in
-                        a therapeutic, loving and relaxing environment which caters for multiple learning needs and
-                        barriers to learning on all levels. We provide on-level and active learning and therapy in
-                        various fields, with the children’s best interests at the centre of it all.
-                        <br>
-                        <br>
-                        All facilitation occurs on a personal level where the learner’s individual level of
-                        understanding is built upon, maximising understanding, building self-confidence and opening the
-                        doors for all to feel capable and love learning.</p>
+                    <div class="about__text__container">
+                        <h2 class="section__heading">About Us</h2>
+                        <p class="about__text">Zoë Bell & Associates was founded by Zoë Kayla Bell, a passionate and
+                            highly
+                            qualified Remedial and Learning Support Therapist. Zoë has a Bachelor of Education degree
+                            (Cum
+                            Laude) as well as a Bachelor of Education Honours degree - Learning Support (Cum Laude) and
+                            is
+                            currently pursuing a Counselling Psychology degree.
+                            <br>
+                            <br>
+                            Zoë Bell & Associates aims to provide holistic, quality and professional educational support
+                            in
+                            a therapeutic, loving and relaxing environment which caters for multiple learning needs and
+                            barriers to learning on all levels. We provide on-level and active learning and therapy in
+                            various fields, with the children’s best interests at the centre of it all.
+                            <br>
+                            <br>
+                            All facilitation occurs on a personal level where the learner’s individual level of
+                            understanding is built upon, maximising understanding, building self-confidence and opening
+                            the
+                            doors for all to feel capable and love learning.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -85,47 +92,57 @@
             <div class="team__body">
                 <div class="team__details team__details--first">
                     <img class="team__img" src="assets/img/zoe_pic.jpg" alt="">
-                    <h2 class="team__subheading">Zoe Bell</h2>
-                    <p class="team__text">
-                        Remedial therapist
-                        <br>
-                        Bachelor of Education Foundation Phase (Cum Laude) University of Fort Hare
-                        <br>
-                        Bachelor of Education Honours – Learning support and Remedial therapy (Cum Laude) Stellenbosch
-                        University</p>
+                    <div>
+                        <h2 class="team__subheading">Zoe Bell</h2>
+                        <p class="team__text">
+                            Remedial therapist.
+                            <br>
+                            Bachelor of Education Foundation Phase (Cum Laude) University of Fort Hare.
+                            <br>
+                            Bachelor of Education Honours – Learning support and Remedial therapy (Cum Laude)
+                            Stellenbosch
+                            University.</p>
+                    </div>
                 </div>
                 <div class="team__details">
                     <img class="team__img" src="assets/img/josh_pic.jpg" alt="">
-                    <h2 class="team__subheading">Joshua Bell</h2>
-                    <p class="team__text">
-                        High School Tutor
-                        <br>
-                        Specialising in Accounting, Science, IT and Mathematics.</p>
+                    <div>
+                        <h2 class="team__subheading">Joshua Bell</h2>
+                        <p class="team__text">
+                            High School Tutor
+                            <br>
+                            Certificate in IT programing
+                            <br>
+                            Specialising in Accounting, Science, IT and Mathematics Obtained an aggregate of 75 percent in Matric 2016</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="contact">
-            <h2 class="section__heading">Contact Us</h2>
-            <div class="contact__body">
-                <img class="contact__img" src="assets/img/contact.jpg">
-                <div class="contact__details">
-                    <div class="contact__text--first">
-                        <i class="fab fa-whatsapp"></i>
-                        <span>0718778372</span>
-                    </div>
-                    <div class="contact__text">
-                        <i class="fas fa-envelope"></i>
-                        <span>zoebellassociates@gmail.com</span>
-                    </div>
-                    <div class="contact__text">
-                        <i class="fab fa-facebook"></i>
-                        <span>Zoё Bell & Associates.</span>
+                <div class="team__details">
+                    <img class="team__img" src="assets/img/janine_pic.jpg" alt="">
+                    <div>
+                        <h2 class="team__subheading">Janine Louw</h2>
+                        <p class="team__text">
+                            Occupational Therapist
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
     </div>
+
+    <section class="contact">
+        <div class="contact__details">
+            <i class="fab fa-whatsapp"></i>
+            <span>0718778372</span>
+        </div>
+        <div class="contact__details">
+                <i class="far fa-envelope"></i>
+                <span>zoebellassociates@gmail.com</span>
+            </div>
+        <div class="contact__details">
+            <i class="fab fa-facebook"></i>
+            <span>Zoё Bell & Associates.</span>
+        </div>
+    </section>
 </body>
 
 </html>
