adding changes to about

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="about__details">
                     <img class="about__img" src="assets/img/about_us.jpg" alt="">
                     <div class="about__text__container">
-                        <h2 class="section__heading">About Us</h2>
+                        <h2 class="section__heading about--heading">About Us</h2>
                         <p class="about__text">Zoë Bell & Associates was founded by Zoë Kayla Bell, a passionate and
                             highly
                             qualified Remedial and Learning Support Therapist. Zoë has a Bachelor of Education degree
