fine tweaking footer fonts

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <section class="contact">
-        <div class="contact__details">
+        <div class="contact__details" style="margin-top: 0px;">
             <i class="fab fa-whatsapp"></i>
             <span>0718778372</span>
         </div>
