--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         <a href="#">Zoe Bell and Associates</a>
                     </div>
                     <div class="header__links">
-                        <a href="#">About</a>
-                        <a href="#">Team</a>
-                        <a href="#">Contact</a>
+                        <a href="#about">About</a>
+                        <a href="#team">Team</a>
+                        <a href="#contact">Contact</a>
                     </div>
                 </nav>
                 <div class="header__slogan">
@@ -40,7 +40,7 @@
                         student to feel comfortable.</span>
                 </div>
 
-                <div class="packages__details">
+                <div id="about" class="packages__details">
                     <img class="packages__img" src="assets/img/subjects.jpg" alt="">
                     <h3 class="packages__subheading">Variety of subjects</h3>
                     <span class="packages__text">We teach a variety of subjects<br> including Math, Physics and
@@ -87,7 +87,7 @@
             </div>
         </section>
 
-        <section class="team">
+        <section id="team" class="team">
             <h2 class="section__heading">Meet The Team</h2>
             <div class="team__body">
                 <div class="team__details team__details--first">
@@ -129,7 +129,7 @@
         </section>
     </div>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="contact__details" style="margin-top: 0px;">
             <i class="fab fa-whatsapp"></i>
             <span>0718778372</span>
